fix hero text spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ body, html {
     margin: 0;
 }
 
-h1 {
+.uppercase {
     text-transform: uppercase;
 }
 
@@ -95,6 +95,7 @@ main {
     color: var(--white);
     background-color: var(--pink);
     border-radius: var(--border-radius);
+    text-transform: uppercase;
     text-align: center;
     cursor: pointer;
   }
@@ -102,4 +103,7 @@ main {
 .hero-content button:hover {
     background-color: var(--offwhite);
     color: var(--black);
+}
+#spacing {
+    margin-top: 20px;
 }
